[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sky.gd" type="Script" id=1]
[ext_resource path="res://Sky/star8.png" type="Texture" id=2]
[ext_resource path="res://Sky/star1.png" type="Texture" id=3]
[ext_resource path="res://Sky/star7.png" type="Texture" id=4]
[ext_resource path="res://Sky/star5.png" type="Texture" id=5]
[ext_resource path="res://Sky/star2.png" type="Texture" id=6]
[ext_resource path="res://Sky/star9.png" type="Texture" id=7]
[ext_resource path="res://Sky/star10.png" type="Texture" id=8]
[ext_resource path="res://Sky/star3.png" type="Texture" id=9]
[ext_resource path="res://Sky/star4.png" type="Texture" id=10]
[ext_resource path="res://Sky/star6.png" type="Texture" id=11]
[ext_resource path="res://Sky/planet2.png" type="Texture" id=12]
[ext_resource path="res://Sky/planet.png" type="Texture" id=13]
[ext_resource path="res://Sky/home.png" type="Texture" id=14]

[node name="Sky" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 316.0
color = Color( 0.0784314, 0, 0.564706, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="star1" type="Sprite" parent="."]
position = Vector2( 45, 54 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="star2" type="Sprite" parent="."]
position = Vector2( 98, 211 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="star3" type="Sprite" parent="."]
position = Vector2( 205, 143 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="star4" type="Sprite" parent="."]
position = Vector2( 468, 85 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="star5" type="Sprite" parent="."]
position = Vector2( 520, 243 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="star6" type="Sprite" parent="."]
position = Vector2( 678, 101 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="star7" type="Sprite" parent="."]
position = Vector2( 678, 254 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="star8" type="Sprite" parent="."]
position = Vector2( 731, 181 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="star9" type="Sprite" parent="."]
position = Vector2( 836, 112 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="star10" type="Sprite" parent="."]
position = Vector2( 941, 197 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="planet" type="Sprite" parent="."]
position = Vector2( 303, 105 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="planet_red" type="Sprite" parent="."]
visible = false
position = Vector2( 303, 105 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="home" type="Sprite" parent="."]
position = Vector2( 500, 301 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
